# mini-ecommerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  manage.py  pyproject.toml  requirements.txt
mini_ecommerce/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_remove_user_username.py  0002_rename_product_id_cartitem_product_and_more.py  0003_remove_user_first_name_remove_user_last_name.py  0003_rename_user_id_order_user_and_more.py  0004_alter_product_image.py  0005_alter_product_name.py  0006_alter_cartitem_quantity_alter_orderitem_quantity_and_more.py  0007_alter_orderitem_price.py  0008_alter_orderitem_price_alter_product_price.py  0009_remove_orderitem_price_order_order_no_and_more.py  0010_remove_order_payment_status.py  0011_order_created_at.py
shop/tests/: test_models.py
shop/tests/test_endpoint/: test_cart_endpoints.py  test_order_endpoints.py
shop/tests/test_models/: test_cartitem_model.py  test_order_model.py  test_orderitem_model.py  test_product_model.py  test_user_model.py
shop/tests/test_views/: test_cart_endpoints.py  test_cart_views.py  test_order_views.py  test_product_endpoints.py  test_product_views.py
shop/views/: cart_views.py  order_views.py  product_views.py
shop_web/: apps.py  form.py  urls.py
shop_web/forms/: auth_forms.py  cart_forms.py
shop_web/services/: ecpay_payment_sdk.py  ecpay_service.py
shop_web/static/css/: shop_page.css
shop_web/templates/: base.html  cart_list.html  checkout_result.html  index.html  my_cart.html  order_detail.html  order_list.html  product_detail.html  product_list.html  shop.html  sign-in.html  sign-up.html  sign_in.html  sign_up.html
shop_web/templates/layout/: base.html  footer.html  navbar.html
shop_web/tests/: test_urls.py
shop_web/views/: auth_views.py  checkout_views.py  order_views.py  payment_views.py  shop_views.py
templates/: 404.html
tests/: test_models.py
tests/test_endpoint/: test_cart_endpoint.py  test_cart_endpoints.py  test_order_endpoints.py  test_product_endpoint.py  test_product_endpoints.py
(+3 files in other folders)
