[tool.ruff]
exclude = ["migrations", ".venv", "ecpay_payment_sdk.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
authors = ["Yanpin <a131234568@gmail.com>"]
description = ""
name = "mini-ecommerce"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.34.107"
django = "^4.1"
django-seed = "^0.3.1"
django-storages = "^1.14.3"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
djoser = "^2.2.2"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
python = "^3.11.8"
python-dotenv = "^1.0.1"
sentry-sdk = {extras = ["django"], version = "^2.2.0"}

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
faker = "^25.0.1"
pre-commit = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
